# content-management-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/api/: urls.py
apps/common/: models.py  services.py  urls.py  views.py
apps/common/api/: urls.py  views.py
apps/common/tests/: utils.py
apps/company_description/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/company_description/api/: serializers.py  urls.py  views.py
apps/company_description/fixtures/: init.json
apps/company_description/migrations/: 0001_initial.py  0002_alter_clinicdescription_options_and_more.py  0003_rename_clinicimage_companyimage_alter_link_options_and_more.py  0004_companydescription_delete_clinicdescription.py
apps/company_description/tests/: utils.py
apps/contacts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/contacts/migrations/: 0001_initial.py
apps/contacts/tests/: utils.py
apps/employees/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/employees/migrations/: 0001_initial.py  0002_employee_meta_description_employee_meta_keywords_and_more.py  0003_rename_juniormedicalstaff_juniorstaff_and_more.py
apps/employees/tests/: utils.py
apps/feedback_forms/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
apps/feedback_forms/fixtures/: init.json
apps/feedbacks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/feedbacks/tests/: utils.py
apps/files/: admin.py  models.py  utils.py
apps/images/: admin.py  models.py
apps/ordering/: admin.py  models.py  services.py
apps/portfolios/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/seo/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/services/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
content_management_system/: asgi.py  settings.py  tests_settings.py  urls.py  wsgi.py
doc/: Diagrams.vsdx  architecture.drawio
(+90 files in other folders)
